# SelfBot

./: .gitignore  Dockerfile  README.md  client.py  config.env.example  config.py  docker-compose.yaml  docker-compose.yaml.example  login.py  main.py  pip.txt  pyproject.toml
handlers/: __init__.py  base.py  fix.py  fun.py
libs/: errors.py  util.py
